# SensusaiHarness

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  REWRITE_PLAN.md  docker-compose.yml  package-lock.json  task.md
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  pyproject.toml
backend/migrations/: 001_initial.sql
backend/src/: schemas.py
backend/src/harness/: evaluator.py  role_registry.py  workspace.py
backend/src/routes/: __init__.py  messages.py  runs.py  threads.py
backend/tests/: conftest.py  test_artifacts.py  test_runner_lifecycle.py
core/src/: auth.rs  config.rs  event_bus.rs  main.rs
crates/provider-claude/: Cargo.toml
crates/provider-claude/src/: lib.rs
crates/provider-codex/: Cargo.toml
crates/provider-codex/src/: lib.rs
crates/sah-cli/: Cargo.toml
crates/sah-cli/src/: config.rs  main.rs
crates/sah-domain/: Cargo.toml
crates/sah-domain/src/: lib.rs
crates/sah-provider/: Cargo.toml
crates/sah-provider/src/: lib.rs
crates/sah-runtime/: Cargo.toml
crates/sah-runtime/src/: lib.rs
crates/sah-runtime/tests/: fixture_flows.rs
crates/sah-runtime/tests/fixtures/: claude_run.stdout.jsonl  codex_resume.stdout.jsonl  codex_run.stdout.jsonl
crates/sah-store/: Cargo.toml
crates/sah-store/src/: lib.rs
docs/: ARCHITECTURE.md  COMPATIBILITY.md  LEGACY_AUDIT.md  LEGACY_POLICY.md  OPERATIONS.md  PHASE2_PLAN.md  RUNBOOK.md  sqlite_schema_v1.sql
frontend/: Dockerfile
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/runs/[id]/: page.tsx
frontend/src/components/: create-run-dialog.tsx  run-card.tsx
frontend/src/components/run-detail/: budget-gauge.tsx  qa-report-viewer.tsx  role-panel.tsx
frontend/src/lib/: types.ts
legacy/: README.md  REWRITE_PLAN.md  package.json
legacy/backend/: .dockerignore
legacy/backend/src/: auth.py  config.py  db.py  deps.py  main.py
legacy/backend/src/harness/: __init__.py  artifacts.py  event_emitter.py  generator.py  llm_client.py  planner.py  progress.py  runner.py
legacy/backend/src/routes/: roles.py
legacy/backend/tests/: test_execution_modules.py  test_runs_serialization.py
legacy/docs/: API.md  ARCHITECTURE.md  HARNESS_RUNTIME.md  PHASE2_PLAN.md  README.md  RUNBOOK.md  SQLITE_SCHEMA.md
legacy/frontend/: next.config.ts
legacy/frontend/src/app/: globals.css
legacy/frontend/src/app/login/: page.tsx
legacy/frontend/src/app/settings/: page.tsx
legacy/frontend/src/app/threads/[id]/: page.tsx
legacy/frontend/src/components/run-detail/: contract-viewer.tsx  control-bar.tsx  event-stream.tsx  sprint-timeline.tsx
legacy/frontend/src/lib/: api.ts
legacy/web-core/: Cargo.toml  Dockerfile
legacy/web-core/src/: ingest.rs  proxy.rs  stream.rs
