[workspace]
members = [
    "crates/provider-claude",
    "crates/provider-codex",
    "crates/sah-cli",
    "crates/sah-domain",
    "crates/sah-provider",
    "crates/sah-runtime",
    "crates/sah-store",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/DingDiming/SensusaiHarness"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.17", features = ["serde", "v7"] }
