[project]
name = "sensusai-harness-backend"
version = "0.1.0"
description = "SensusAI Harness — Python Harness Runtime"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[aiosqlite]>=2.0,<3",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "python-jose[cryptography]>=3.3,<4",
    "argon2-cffi>=23.1,<25",
    "uuid6>=2024.7",
    "httpx>=0.28,<1",
    "openai>=1.60,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
