[package]
name = "sah-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
sah-domain = { path = "../sah-domain" }
sah-provider = { path = "../sah-provider" }
sah-store = { path = "../sah-store" }

[dev-dependencies]
provider-claude = { path = "../provider-claude" }
provider-codex = { path = "../provider-codex" }
